Add comment for total display in cart.html
Added comment to clarify total display logic.

--- a/frontend/frontend/cart.html
+++ b/frontend/frontend/cart.html
@@ -666,7 +666,7 @@ $(document).ready(function(){
         }
     });
     
-   
+   // Hien thi total khi vao
     	$(".total_area ul").html(
 			'<li>Total <span id="newtotal">$' + subtotal + '</span></li>');
 	
